# speedtest-to-influx-db

./: Cargo.toml
src/: main.rs
